snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210920.105033-2.jar.md5
0a14b92e0678fac83ac4c467cf50eaff